--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-card-flip": "^1.0.11",
     "react-dom": "^16.13.1",
+    "react-imask": "^6.0.5",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-sidebar": "^3.0.2",
+    "react-text-mask": "^5.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "zxcvbn": "^4.4.2"
